tests/snapshots/test_integration__create_table.snap
---
source: tests/test_integration.rs
expression: res
---
CreateTableOutput {
    table_description: Some(
        TableDescription {
            attribute_definitions: Some(
                [
                    AttributeDefinition {
                        attribute_name: Some(
                            "pk",
                        ),
                        attribute_type: Some(
                            S,
                        ),
                    },
                    AttributeDefinition {
                        attribute_name: Some(
                            "sk",
                        ),
                        attribute_type: Some(
                            S,
                        ),
                    },
                ],
            ),
            table_name: Some(
                "table-d787c77d-76d4-473e-8165-b006241c6a5d",
            ),
            key_schema: Some(
                [
                    KeySchemaElement {
                        attribute_name: Some(
                            "pk",
                        ),
                        key_type: Some(
                            Hash,
                        ),
                    },
                    KeySchemaElement {
                        attribute_name: Some(
                            "sk",
                        ),
                        key_type: Some(
                            Range,
                        ),
                    },
                ],
            ),
            table_status: Some(
                Creating,
            ),
            creation_date_time: Some(
                DateTime {
                    seconds: 1677883837,
                    subsecond_nanos: 575000047,
                },
            ),
            provisioned_throughput: Some(
                ProvisionedThroughputDescription {
                    last_increase_date_time: None,
                    last_decrease_date_time: None,
                    number_of_decreases_today: Some(
                        0,
                    ),
                    read_capacity_units: Some(
                        10,
                    ),
                    write_capacity_units: Some(
                        10,
                    ),
                },
            ),
            table_size_bytes: Some(
                0,
            ),
            item_count: Some(
                0,
            ),
            table_arn: Some(
                "arn:aws:dynamodb:eu-west-2:678133472802:table/table-d787c77d-76d4-473e-8165-b006241c6a5d",
            ),
            table_id: Some(
                "17132e68-67e5-4b39-aa0d-5e8d3f43312d",
            ),
            billing_mode_summary: None,
            local_secondary_indexes: None,
            global_secondary_indexes: None,
            stream_specification: None,
            latest_stream_label: None,
            latest_stream_arn: None,
            global_table_version: None,
            replicas: None,
            restore_summary: None,
            sse_description: None,
            archival_summary: None,
            table_class_summary: None,
        },
    ),
}
