tests/snapshots/test_integration__create_table_invalid_input.snap
---
source: tests/test_integration.rs
expression: res.to_json_value().await
---
{
  "body": {
    "__type": "com.amazon.coral.service#SerializationException"
  },
  "status": 400
}
