tests/snapshots/test_integration__describe_table.snap
---
source: tests/test_integration.rs
expression: res
---
DescribeTableOutput {
    table: Some(
        TableDescription {
            attribute_definitions: Some(
                [
                    AttributeDefinition {
                        attribute_name: Some(
                            "pk",
                        ),
                        attribute_type: Some(
                            S,
                        ),
                    },
                    AttributeDefinition {
                        attribute_name: Some(
                            "sk",
                        ),
                        attribute_type: Some(
                            S,
                        ),
                    },
                ],
            ),
            table_name: Some(
                "[table-name]",
            ),
            key_schema: Some(
                [
                    KeySchemaElement {
                        attribute_name: Some(
                            "pk",
                        ),
                        key_type: Some(
                            Hash,
                        ),
                    },
                    KeySchemaElement {
                        attribute_name: Some(
                            "sk",
                        ),
                        key_type: Some(
                            Range,
                        ),
                    },
                ],
            ),
            table_status: Some(
                Active,
            ),
            creation_date_time: Some(
                DateTime {
                    [seconds],
                    [nanos],
                },
            ),
            provisioned_throughput: Some(
                ProvisionedThroughputDescription {
                    last_increase_date_time: None,
                    last_decrease_date_time: None,
                    number_of_decreases_today: Some(
                        0,
                    ),
                    read_capacity_units: Some(
                        10,
                    ),
                    write_capacity_units: Some(
                        10,
                    ),
                },
            ),
            table_size_bytes: Some(
                0,
            ),
            item_count: Some(
                0,
            ),
            table_arn: Some(
                "arn:aws:dynamodb:[region]:[account]:table/[table-name]",
            ),
            table_id: Some(
                "[table-id]",
            ),
            billing_mode_summary: None,
            local_secondary_indexes: None,
            global_secondary_indexes: None,
            stream_specification: None,
            latest_stream_label: None,
            latest_stream_arn: None,
            global_table_version: None,
            replicas: None,
            restore_summary: None,
            sse_description: None,
            archival_summary: None,
            table_class_summary: None,
        },
    ),
}
