tests/snapshots/test_integration__get_item_missing_table.snap
---
source: tests/test_integration.rs
expression: res.to_json_value().await
---
{
  "__type": "com.amazonaws.dynamodb.v20120810#ResourceNotFoundException",
  "message": "Requested resource not found"
}
