tests/snapshots/test_integration__put_item.snap
---
source: tests/test_integration.rs
expression: res
---
PutItemOutput {
    attributes: None,
    consumed_capacity: None,
    item_collection_metrics: None,
}
