tests/snapshots/test_integration__update_item-2.snap
---
source: tests/test_integration.rs
expression: res
---
GetItemOutput {
    item: Some(
        {
            "pk": S(
                "123",
            ),
            "value": S(
                "another",
            ),
            "sk": S(
                "456",
            ),
        },
    ),
    consumed_capacity: None,
}
